Like bug fixed, header style modified
