# service/api/api-handler.go
@@ -14,9 +14,9 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/:userid", rt.wrap(rt.getUserProfile))
 	rt.router.POST("/users/:userid/following", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:userid/following/:followingid", rt.wrap(rt.unfollowUser))
-	rt.router.POST("/users/:userid/banned_users", rt.wrap(rt.banUser))
-	rt.router.DELETE("/users/:userid/banned_users/:banneduserid", rt.wrap(rt.unbanUser))
-	rt.router.GET("/users/:userid/banned_users/:banneduserid", rt.wrap(rt.getBanStatus))
+	rt.router.POST("/users/:userid/banned-users", rt.wrap(rt.banUser))
+	rt.router.DELETE("/users/:userid/banned-users/:banneduserid", rt.wrap(rt.unbanUser))
+	rt.router.GET("/users/:userid/banned-users/:banneduserid", rt.wrap(rt.getBanStatus))
 	rt.router.GET("/users/:userid/stream", rt.wrap(rt.getMyStream))
 	rt.router.GET("/users", rt.wrap(rt.getUsers))
 
